Transition for every section

--- a/index.html
+++ b/index.html
@@ -192,7 +192,6 @@
   </script>
   <script>
     const $form = document.querySelector('#contact')
-
     $form.addEventListener('submit', handleSubmit)
 
     async function handleSubmit(event) {
@@ -210,6 +209,9 @@
         alert('Gracias por contactarme!')
       }
     }
+  </script>
+  <script>
+    
   </script>
   <!-- For form withouth backend and just JS -->
   <!-- <script>
