--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       </div>
     </div>
   </header>
+  <div class="point" id='point'></div>
   
   <div class="wrapper">
     <section class="hero" id="main">
@@ -43,7 +44,7 @@
       </div>
   
       <div class="hero-copy">
-        <h1>
+        <h1 id="title">
           <span>¡Hola a todos!</span>
           <span>Soy Jaume</span>
         </h1>
